Bug 909589 - Ensure FrameAnimator is created with the correct animation mode. r=seth